<resources>
    <string name="app_name">BINCard</string>
    <string name="title_history">История</string>
    <string name="title_search">Поиск</string>
    <string name="title_info">Информация</string>
    <string name="no_internet">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="empty_answer">Пустой ответ</string>
    <string name="too_many_requests_try_later">Слишком много запросов, повторите позже</string>
    <string name="unknown">Неизвестно</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="delete">←</string>
    <string name="enter">Принять</string>
    <string name="apply">Подтвердить</string>
    <string name="enter_bin_num">Введите BIN номер карты</string>
    <string name="first_six_num">(первые 6–8 цифр)</string>
    <string name="bin">BIN</string>
    <string name="country">Страна</string>
    <string name="coordinate">Координаты</string>
    <string name="card_type">Тип карты</string>
    <string name="bank_url">URL банка</string>
    <string name="bank_phone">Телефон банка</string>
    <string name="bask_site">Сайт банка</string>
    <string name="bank_city">Город банка</string>
    <string name="bin_info">Информация о BIN коде:</string>
    <string name="history_empty">История пуста</string>
    <string name="do_you_want_delete_card">Хотите удалить из истории?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>