<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/one" />

            <Button
                android:id="@+id/button_2"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/two" />

            <Button
                android:id="@+id/button_3"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/three" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/four" />

            <Button
                android:id="@+id/button_5"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/five" />

            <Button
                android:id="@+id/button_6"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/six" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button_8"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button_9"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/nine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_delete"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/delete" />

            <Button
                android:id="@+id/button_0"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/zero" />

            <Button
                android:id="@+id/button_enter"
                style="@style/ButtonKeyboardStyle"
                android:text="@string/enter" />

        </LinearLayout>
    </LinearLayout>

</merge>