<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.bincard.history.ui.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.bincard.search.ui.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_infoFragment"
            app:destination="@id/navigation_info" />
    </fragment>
    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.bincard.info.ui.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

</navigation>